# quill

./: .prettierignore  CLAUDE.md  CONTRIBUTING.md  PRD.md  README.md  ai-reply.spec.ts  eslint.config.js  features.spec.ts  index.html  package-lock.json  package.json  playwright.config.ts  tauri-features.spec.ts  track-changes.spec.ts  tsconfig.node.json  vite.config.ts  vitest.config.ts
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  release.yml
design references/: tokens.css
docs/: SECURITY.md  USER_GUIDE.md
docs/design-references/: component-spec.md  constraints.md  reference.html
docs/release-notes/: v0.1.0.md  v0.2.0.md  v0.3.0.md  v0.3.1.md  v1.0.0.md
e2e/: ai-reply.spec.ts  data-safety.spec.ts  document-review.spec.ts  features.spec.ts  find-replace.spec.ts  links.spec.ts  tauri-features.spec.ts  toolbar.spec.ts  track-changes.spec.ts
plugin/.claude-plugin/: marketplace.json
plugin/quill-integration/: README.md
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/source/: render.mjs
src-tauri/src/: lib.rs
src/components/: AddCommentButton.tsx  AppModal.tsx  CommentCard.tsx  CommentLayer.tsx  Editor.tsx  FindBar.tsx  Footer.tsx  ReplacementCard.tsx  ReviewModal.tsx  SessionPicker.tsx  ShareDialog.tsx  SuggestionCard.tsx  Toolbar.tsx  UpdateBanner.tsx
src/contexts/: AuthContext.tsx
src/extensions/: AnnotationFocus.ts  Comment.ts  Find.ts  MarkdownImage.ts  PendingComment.ts  TrackChanges.ts
src/hooks/: useComments.ts  (+7 more)
(+34 files in other folders)
