[package]
name = "quill"
version = "0.2.0"
description = "The document editor that can hold a conversation — tracked changes, inline comments, and Claude replies for plain Markdown files."
authors = ["Sam Powers <samueldarinpowers@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/sam-powers/quill"

[lib]
name = "quill_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
dirs = "5"

[dev-dependencies]
tempfile = "3"
